kubernetes/overlays/prod/scheduler-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
spec:
  replicas: 1 
  template:
    spec:
      volumes:
      #- name: airflow-dags
      #  persistentVolumeClaim:
      #    claimName: cryoem-daq-prod--sdf-dags
      #- name: airflow-plugins
      #  persistentVolumeClaim:
      #    claimName: cryoem-daq-prod--sdf-plugins
      #- name: airflow-logs
      #  persistentVolumeClaim:
      #    claimName: cryoem-daq-prod--sdf-logs
