kubernetes/overlays/prod/worker-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 3 
  template:
    spec:
      containers:
      - name: worker
        volumeMounts:
        - name: airflow-dags
          mountPath: /usr/local/airflow/dags
        - name: airflow-plugins
          mountPath: /usr/local/airflow/plugins
        - name: airflow-logs
          mountPath: /usr/local/airflow/logs
        - name: sdf-exp
          mountPath: /sdf/group/cryoem/exp/
        - name: tem1
          mountPath: /srv/cryoem/tem1
        - name: tem2
          mountPath: /srv/cryoem/tem2
        - name: tem3
          mountPath: /srv/cryoem/tem3
        - name: tem4
          mountPath: /srv/cryoem/tem4
        - name: temalpha
          mountPath: /srv/cryoem/temalpha
        - name: tembeta
          mountPath: /srv/cryoem/tembeta
        - name: temgamma
          mountPath: /srv/cryoem/temgamma
        - name: fib1
          mountPath: /srv/cryoem/fib1
      volumes:
      - name: airflow-dags
        persistentVolumeClaim:
          claimName: cryoem-daq-dags
      - name: airflow-plugins
        persistentVolumeClaim:
          claimName: cryoem-daq-plugins
      - name: airflow-logs
        persistentVolumeClaim:
          claimName: cryoem-daq-logs
      - name: sdf-exp
        persistentVolumeClaim:
          claimName: cryoem-daq-exp
      - name: tem1
        persistentVolumeClaim:
          claimName: cryoem-daq-tem1
      - name: tem2
        persistentVolumeClaim:
          claimName: cryoem-daq-tem2
      - name: tem3
        persistentVolumeClaim:
          claimName: cryoem-daq-tem3
      - name: tem4
        persistentVolumeClaim:
          claimName: cryoem-daq-tem4
      - name: temalpha
        persistentVolumeClaim:
          claimName: cryoem-daq-temalpha
      - name: tembeta
        persistentVolumeClaim:
          claimName: cryoem-daq-tembeta
      - name: temgamma
        persistentVolumeClaim:
          claimName: cryoem-daq-temgamma
      - name: fib1
        persistentVolumeClaim:
          claimName: cryoem-daq-fib1
