kubernetes/overlays/prod/database-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  annotations:
    metallb.universe.tf/address-pool: farm04-openstack
    metallb.universe.tf/allow-shared-ip: cryoem-daq--prod

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  replicas: 1
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Gi
      storageClassName: cryoem-daq-prod--postgres
