kubernetes/overlays/prod/endpoints-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cryoem-daq
  annotations:
    metallb.universe.tf/address-pool: cryoem-daq
spec:
  type: LoadBalancer
  internalTrafficPolicy: Cluster
  ports:
  - name: pgbouncer
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    cnpg.io/poolerName: cryoem-daq-pooler-rw
